Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -135,6 +135,9 @@ The  greater decrease in \soii compared to secondary sulphate is due to a combin
 
 On average the reductions in observations for the last 20 years (2000-2019) are -3.9, -3.2 and -3.1\% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -5.1, -3.8 and -4.3\% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the absolute trend is higher in observations, but within the 95\% confidence interval to the modelled trends.
 
+The relative difference between the two decades are small. The changes in SO$_x$ emissions are 58\% for 2000-2010 and 55\% 2010-2019, and in observations the total changes in these two periods are between 26-43\% for the different compounds in 2010-2019 and 25-44\% for 2000-2010, while for the model 38-50\% and 42-54\%, respectively.  	
+
+
 
 \begin{figure}
 	\centering
@@ -561,7 +564,7 @@ For the whole period, 36 and 18 sites with satisfactory data coverage have been 
 
 Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. More detailed discussion of PM trends is given below.
 
-For the period of 2000-2019, the average observed \PM[10] trends are -0.36 \ug $yr^{-1}$, or -1.83 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.27 \ug $yr^{-1}$ and -1.92 \% $yr^{-1}$. For \PM[2.5], the average absolute trends are -0.29 and -0.25 \ug $yr^{-1}$ and the relative ones are -2.42 and -2.51 \% $yr^{-1}$, observed and modelled respectively. The reduction of anthropogenic emissions during this period is a major cause for the decreasing average concentrations of PM, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. Considerable changes in the annual mean PM due to an inter-annual meteorological variability also contribute to weaken estimated PM trends.
+For the period of 2000-2019, the average observed \PM[10] trends are -0.36 \ug $yr^{-1}$, or -1.83 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.27 \ug $yr^{-1}$ and -1.92 \% $yr^{-1}$. For \PM[2.5], the average absolute trends are -0.29 and -0.25 \ug $yr^{-1}$ and the relative ones are -2.42 and -2.51 \% $yr^{-1}$, observed and modelled respectively. The reduction of anthropogenic emissions during this period is a major cause for the decreasing average concentrations of PM, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. Considerable changes in PM pollution due to an inter-annual meteorological variability also interfere with the PM trends caused by emission changes.
 
 Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trends, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% inter-quartile range (IQR) of the observed ones.} A larger spatial variability of observed trends with respect to model simulated ones can also be seen on the maps of relative trends in Figure \ref{fig:pm_trends}. Most of the sites, for which the observations estimate insignificant trends, are located in Central Europe (mostly in Germany). The modelled trends are mostly significant and ranging between -1 and -3 \% over practically all European part of EMEP.
 
@@ -586,6 +589,25 @@ For both the observed and modelled data the trends show an increase in the 10th 
 Figure \ref{fig:O3_boxplot} indicates that the model overestimates the decrease of the 99 percentile for stations south of 49 \degrees N and overestimates the increase in the 10th percentile in both regions. As explained above, the relative trend values shown in Figure \ref{fig:O3_boxplot} are based on the Sen's slopes and use the value of these trend lines the first year (i.e. 2000) as the reference for modelled and observed data separately. The results given in Figure \ref{fig:O3_boxplot} thus show the estimated relative changes without any reference to the absolute levels of the modelled and observed data. 
 
 The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. These results show that the modelled 10th and 50th percentiles are higher than observed whereas the observed high percentiles (95-99) are higher than modelled. The bias in the high percentiles are particularly strong for stations south of 49 \degrees N. For the 75th percentile, the absolute levels of the modelled and observed data agree very well. It is furthermore seen that the interannual variation in the higher percentiles, i.e. the change in levels from year to year, is very well reproduced by the model but with a substantial offset. 
+
+\begin{table}
+\caption{\label{tab:pm25_stat} The estimated mean values of the absolute and relative trends in O$_3$ metrics based on all stations (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided.}
+\begin{center}
+\scalebox{0.65}{%
+\begin{tabular}{ll|ccc|cccc|cccc}
+\toprule
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (ppb)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+Period & Parameter &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
+\midrule
+2000-2019 & 75p &  93 &  35 &  68 & -0.17 & -0.20, -0.12 & -0.18 & -0.20, -0.16 & -0.32 & -0.39, -0.25 & -0.35 & -0.38, -0.31 \\
+2000-2019 & 99p &  93 &  32 &  76 & -0.44 & -0.50, -0.37 & -0.41 & -0.44, -0.37 & -0.57 & -0.64, -0.48 & -0.61 & -0.64, -0.56 \\
+\bottomrule
+\end{tabular}}
+\end{center}
+\end{table}
+
+
+
 
 \begin{figure}[h]
 	\centering
@@ -715,6 +737,9 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 }
 \end{figure}
 
+
+
+
 A 4.5$\pm$1.5\%/yr reduction 
  \COMMENT{DS: changed - xx reduction to just xx reduction. Should be careful throughout...}
 in elemental carbon (EC) for 2010--2020 was
@@ -731,8 +756,52 @@ were the only sites where a statistically significant reduction was
 observed for all seasons, being most pronounced in summer, although
 by a small margin. When considering all sites, the reduction was most
 pronounced in summer and fall (Tab.~\ref{tab:KEX1}), but the general picture is
-that there is a minor seasonal variability in the reduction of EC,
-reflecting minor seasonal variability in most EC sources, except from
+that there is a minor seasonal variability in the reduction of EC.
+
+
+
+
+\begin{table}[H]
+\centering
+\parbox{12cm}{
+\caption{Relative trends (\%/yr) (and p-values in parentheses) calculated for Birkenes using different time-windows \label{tab:BirkenesTrends}}}
+\begin{tabular}{lcccc}
+\hline
+     &         & 2008-2018(a)& 2008-2019(b)     & 2010-2019(b)       \\
+\hline
+ & & & & \\
+\multicolumn{5}{c}{Original using Karl Espen numbers, taken from text below} \\
+& & & & \\
+EC   & annual  & -4.2        &  -2.21 (0.034)   & -4.24 (0.012) \\
+OC   & annual  &  \QUERY{Karl Espen?}           &   0.18 (1.0)     & -0.64 (1.0)   \\
+Levo & annual  & -2.8        &  -2.48 (0.024)   & -5.2  (0.032) \\
+ & & & & \\
+
+\multicolumn{5}{c}{Revised from Wenche 26/8/21} \\
+ & & & & \\
+
+EC   & annual  & -3.0 (0.043)        &  -2.21 (0.034)   & -4.24 (0.012) \\
+OC   & annual  &  -0.44 (0.876)      &   0.18 (1.0)     & -0.64 (1.0)   \\
+Levo & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
+& & & & \\
+\hline
+\end{tabular}\\
+\parbox{12cm}{
+\COMMENT{ISSUE:  p-values of 1 look odd.}\\
+Notes:
+(a) from Karl Espen's text = ACP 2021 paper
+(b) from Wenche's comparison file;
+(c) from Wenche's earlier 2010-2020 file.
+}
+\end{table}
+
+
+\subsection{Discussion of EC, OC trends}
+
+Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019. 
+
+
+As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This probably reflects the minor seasonal variability in most EC sources, except from
 residential heating. \citet{Yttri2021} found that the reduction in EC
 was most pronounced in spring and summer at the Birkenes Observatory in
 southern Norway for 2001--2018, arguing that this was due to influence
@@ -774,20 +843,20 @@ for the observations.
   provided. \label{tab:KEX1}}
 % \begin{tabular}{lrrrrlrlrlrl}
 %\begin{center}
-\scalebox{0.70}{%
+\scalebox{0.65}{%
 \begin{tabular}{llcc|cccc|cccc}
-%\toprule
-\hline
+\toprule
+%\hline
                \multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
  Season &           total & sign.(obs.) & sign.(mod.) &                   obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
-%\midrule
-\hline
+\midrule
+%\hline
 all    &              15 &         11 &          12 &                  -0.019 &  (-0.031, -0.008) & -0.014 &  (-0.021, -0.007) &                    -4.49 &  (-5.25, -3.73) & -3.81 &  (-4.59, -3.03) \\
 winter &              15 &          6 &           4 &                  -0.029 &  (-0.053, -0.006) & -0.019 &  (-0.032, -0.006) &                    -4.27 &  (-5.49, -3.06) & -3.10 &  (-4.21, -1.98) \\
 spring &              15 &          5 &           8 &                  -0.012 &  (-0.018, -0.006) & -0.013 &  (-0.018, -0.009) &                    -3.88 &  (-4.67, -3.09) & -3.86 &   (-4.92, -2.8) \\
 summer &              15 &          8 &          10 &                  -0.011 &  (-0.015, -0.007) & -0.008 &  (-0.013, -0.004) &                    -4.73 &  (-5.71, -3.74) & -3.71 &  (-4.59,  -2.82) \\
 autumn &              15 &          8 &          11 &                  -0.023 &   (-0.036, -0.01) & -0.018 &  (-0.027, -0.009) &                    -4.96 &   (-6.03, -3.9) & -4.25 &  (-5.15,  -3.35) \\
- \hline % bottomrule
+\bottomrule
 \end{tabular}
 }
 \end{table}
@@ -859,18 +928,18 @@ an increase, typically <0.5\%/yr, for four of the sites.
  }
  
 %\begin{center}
-\scalebox{0.70}{%
+\scalebox{0.65}{%
 \begin{tabular}{llcc|cccc|cccc}
-\hline % toprule
+\toprule
 \multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Seasons &  No. & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
-\hline % midrule
+\midrule
 all    &              15 &          2 &           1 &                  -0.077 &  (-0.132, -0.022) & -0.009 &     (-0.019, 0.0) &                    -2.40 &  (-3.23, -1.57) & -0.59 &   (-1.21, 0.03) \\
 winter &              15 &          6 &           1 &                  -0.148 &  (-0.249, -0.047) & -0.018 &  (-0.032, -0.004) &                    -4.19 &  (-5.16, -3.22) & -1.09 &  (-2.03, -0.15) \\
 spring &              15 &          1 &           0 &                  -0.067 &   (-0.104, -0.03) & -0.013 &  (-0.023, -0.003) &                    -2.18 &  (-3.68, -0.67) & -0.74 &   (-1.94, 0.47) \\
 summer &              15 &          0 &           1 &                  -0.000 &   (-0.024, 0.023) &  0.019 &   (-0.003, 0.041) &                    -0.03 &   (-1.19, 1.12) &  2.13 &    (0.44, 3.83) \\
 autumn &              15 &          1 &           0 &                  -0.098 &   (-0.16, -0.037) & -0.020 &     (-0.041, 0.0) &                    -3.03 &  (-4.43, -1.62) & -1.16 &   (-2.47, 0.15) \\
-\hline % bottomrule
+\bottomrule
 \end{tabular}
 } % end scalebox
 \end{table}
@@ -960,24 +1029,24 @@ OC/\pmfine.
 \begin{figure}
 \includegraphics[width=16cm]{FIGS_TRENDS/Composition_4sites.png}
  \caption{
-  Mass balance of \pmfine at Ispra (IT04), Birkenes (NO02), Diabla Gora
-  (PL05) and Iskrba (SI08) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
+  Mass balance of \pmfine at  Birkenes (NO02), Diabla Gora
+  (PL05), Iskrba (SI08) and Ispra (IT04) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
   observations (left), modeled (middle) and apportionment of eBC
-  into biomass burning/solid fuel (\ebcbb) and fossil fuel/liquid fuel
-  (\ebcbb) for winter 2017/2018 (right). Note that at NO02 and PLO5 the SIA components in observations are from filterpack sampler with no cutoff and probably overestimate the \pmfine SIA. \label{fig:KEX4}
+  into biomass burning/solid fuel (\EBCff) and fossil fuel/liquid fuel
+  (\EBCbb) for winter 2017/2018 (right). Note that at NO02 and PLO5 the SIA components in observations are from filterpack sampler with no cutoff and probably overestimate the \pmfine SIA. \label{fig:KEX4}
  }
 \end{figure}
 
 
 The relative contribution of carbonaceous aerosol, OM (OM = OC $\times$
-1.4--1.7)
+1.4 for Ispra and 1.7 for the other sites)
 \QUERY{DS: could be $>$2!} and EC, to the \pmfine mass concentration along with the major
 SIA species illustrates the importance of the OM fraction for a further
 reduction in \pmfine mass concentration (Fig.~\ref{fig:KEX4}). As a first step,
 the natural and the anthropogenic fraction of the carbonaceous aerosol
 must be separated, then further into abatable categories. Separation of
-eBC into biomass burning/solid fuel (eBCbb) and fossil fuel/liquid fuel
-(eBCff) is possible using data from the multi wavelength aethalometer,
+eBC into biomass burning/solid fuel (\EBCbb) and fossil fuel/liquid fuel
+(\EBCff) is possible using data from the multi wavelength aethalometer,
 currently available at $<$25 EMEP/ACTRIS sites across Europe \citep{Platt20XX}
 \QUERY{Refs: EMEP, 2020; EMEP, 2019; EMEP, 2014}. An obvious next
 step is to implement such analysis as part of regular monitoring,
@@ -985,7 +1054,7 @@ making it possible to validate not only model performance, but also the
 effort made in reducing carbonaceous aerosol from fossil fuel and biomass
 burning sources. Although not directly comparable to the multi-year plots
 presented in Fig.~\ref{fig:KEX4}, results from the EIMPs Winter 2017/2018 nicely
-illustrates the split between eBCbb and eBCff for winter 2017/2018 for
+illustrates the split between \EBCbb and \EBCff for winter 2017/2018 for
 the Italian site Ispra, (IT04), the Norwegian site Birkenes (NO02), the
 Polish site Diabla Gora (PL05) and the Slovenian site Iskrba (SI08). The
 apportionment of eBC can also be used to infer the corresponding fractions
@@ -1002,7 +1071,7 @@ of OM.
  \begin{tabular}{lcccccc}
 \hline  % toprule
  &  &  &  &  &  &  \\
-\multicolumn{7}{c}{EC/\pmfine (2010--2020)} \\
+\multicolumn{7}{c}{EC/\pmfine (2010--2019)} \\
   &  &  &  &  &  &  \\
   \hline
      \multicolumn{3}{c}{Number of sites} & \multicolumn{2}{l}{Absolute change (\ugC/yr)} & \multicolumn{2}{l}{Relative change (\%/yr)} \\
@@ -1014,7 +1083,7 @@ Obs.  &              15 &     4 &                 -0.0009 &  (-0.0012, -0.0006) 
 \hline  % bottomrule
 % \end{tabular}
    &  &  &  &  &  &  \\
-\multicolumn{7}{c}{OC/\pmfine (2010--2020)} \\
+\multicolumn{7}{c}{OC/\pmfine (2010--2019)} \\
    &  &  &  &  &  &  \\
 % \begin{tabular}{lrrrlrl}
 \toprule
@@ -1032,28 +1101,7 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 %\subsection{Issues with inventories used in modelling}
 \COMMENT{DS: MOVED section on issues due to CPOA into chapterTrendsSandN - also affects pmfine trends, and is anyway part of model setup.}
 
-\clearpage
-\subsection{Sensitivity of trends to time-windows}
-\COMMENT{DS: JUST STARTED!!! Probably need to move, but put here for Wenche and Karl Espen to check. ISSUE:  p-values of 1 look odd.}
 
-\begin{table}[H]
-\caption{Relative trends (\%/yr) (and p-values in parentheses) calculated for Birkenes using different time-windows \label{tab:BirkenesTrends}}
-\begin{tabular}{lcccc}
-\hline
-     &         & 2008-2018(a)& 2008-2019(b)     & 2010-2019(b)       \\
-\hline
-EC   & annual  & -4.2        &  -2.21 (0.034)   & -4.24 (0.012) \\
-OC   & annual  &  \QUERY{Karl Espen?}           &   0.18 (1.0)     & -0.64 (1.0)   \\
-Levo & annual  & -2.8        &  -2.48 (0.024)   & -5.2  (0.032) \\
-\hline
-\end{tabular}\\
-Notes:
-(a) from Karl Espen's text = ACP 2021 paper
-(b) from Wenche's comparison file;
-(c) from Wenche's earlier 2010-2020 file.
-\end{table}
-
-\clearpage
 
 \subsection{Conclusion}
 \label{ss:trendsECOCconc}
