--- a/report.tex
+++ b/report.tex
@@ -192,8 +192,8 @@
 %\newcommand{\ECff}{\chem{EC_\mathit{ff}}\xspace}
 %\newcommand{\ECbb}{\chem{EC_\mathit{bb}}\xspace}
 % Better?
-\newcommand{\EBCff}{EBC$_\mathrm{ff}$\xspace}
-\newcommand{\EBCbb}{EBC$_\mathrm{bb}$\xspace}
+\newcommand{\EBCff}{eBC$_\mathrm{ff}$\xspace}
+\newcommand{\EBCbb}{eBC$_\mathrm{bb}$\xspace}
 \newcommand{\ECff}{EC$_\mathrm{ff}$\xspace}
 \newcommand{\ECbb}{EC$_\mathrm{bb}$\xspace}
 %%%%%%%%%%%%%%%%% NEW FOR chaperFST %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
